k8s/ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  labels:
    app: ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      labels:
        app: ingestion
    spec:
      containers:
        - name: ingestion
          image: cs361-ingestion:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-svc
spec:
  selector:
    app: ingestion
  ports:
    - name: http
      port: 8081
      targetPort: 8081
