k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs361-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /v1/telemetry
            pathType: Prefix
            backend:
              service:
                name: ingestion-svc
                port:
                  number: 8081
          - path: /v1/devices
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 8082
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 8082
